Categories clear fixed for proper alignment

--- a/css/outer/docs/categories.less
+++ b/css/outer/docs/categories.less
@@ -1,14 +1,19 @@
 // Categories view
 #content > .categories {
+  .container;
   padding-top: 0;
 }
 
 .categories {
   a {
     display: block;
-    background: @link;
-    border: 2px solid @linkHover;
     margin-bottom: 15px;
+    padding: 10px;
+    background-color: @link;
+    #gradient > .vertical(#115EA6, #0F5391);
+    color: white;
+    border: 2px solid @linkHover;
+    .clearfix;
   }
 
   li {
